--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -18,8 +18,13 @@ header div{
   align-items: center;
 }
 
-h1{
-  font-size: 8vw; /* Il testo si adatta alla larghezza della finestra */
+.desktop-class{
+  font-size: 4vw; /* Il testo si adatta alla larghezza della finestra */
+  color: aliceblue;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.mobile-class{
+  font-size: 7vw; /* Il testo si adatta alla larghezza della finestra */
   color: aliceblue;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
