--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,58 +4,69 @@
 
       <form [formGroup]="RegisterForm" (ngSubmit)="register()">
         <h2 [ngStyle]="{textAlign:'center', margin:'1em'}">Registrazione</h2>
-        <label for="username">Username:</label>
-        <input id="username" class="styleInputText" type="text" formControlName="username"/>
+
+        <input placeholder="Username" class="styleInputText" type="text" formControlName="username"/>
 
         <!--  <input class="styleInputText" type="text" [(ngModel)]="user.username" name="username" required />-->
         <div *ngIf="RegisterForm?.get('username')?.invalid && !ValidateForm" class="error">
           ⚠️ Il nome utente deve avere almeno 3 caratteri
         </div>
 
-        <label for="email">Email:</label>
-        <input id="email" class="styleInputText" type="email" formControlName="email"/>
+        <input placeholder="Email" class="styleInputText" type="email" formControlName="email"/>
         <!--  <input class="styleInputText" type="email" [(ngModel)]="user.email" name="email" required />-->
 
         <div *ngIf="RegisterForm?.get('email')?.invalid && !ValidateForm" class="error">
           ⚠️ l'email è obbligatoria
         </div>
 
-        <label for="password">Password:</label>
-        <input id="password" class="styleInputText" type="password" formControlName="password"/>
+        <!--        <label for="password">Password:</label>-->
+        <!--        <input id="password" class="styleInputText" type="password" formControlName="password"/>-->
+
         <!--  <input class="styleInputText" type="password" [(ngModel)]="user.password" name="password" required />-->
-        <div *ngIf="RegisterForm?.get('password')?.invalid && !ValidateForm" class="error">
-          ⚠️ la password deve contenere ,
-          <ul>
-            <li>8 caratteri</li>
-            <li>una maiuscola</li>
-            <li>una minuscola</li>
-            <li>un carattere speciale ($-!-%-*-?-&)</li>
-          </ul>
+        <div class="password-container">
+          <input
+            [type]="showPassword ? 'text' : 'password'"
+            id="password"
+            type="password"
+            formControlName="password"
+            placeholder="Password"
+            class="password-input styleInputText"
+          />
+          <button type="button" class="button-pass-eye" (click)="togglePasswordVisibility()">
+            <i [class]="!showPassword ? 'fa fa-eye-slash' : 'fa fa-eye'" style="color: dimgrey;"></i>
+          </button>
         </div>
 
+        <div class="password-container">
+          <div *ngIf="RegisterForm?.get('password')?.invalid && !ValidateForm" class="error">
+            ⚠️ la password deve contenere ,
+            <ul>
+              <li>8 caratteri</li>
+              <li>una maiuscola</li>
+              <li>una minuscola</li>
+              <li>un carattere speciale ($-!-%-*-?-&)</li>
+            </ul>
+          </div>
+          <input
+            [type]="showConfirmPass ? 'text' : 'password'"
+            placeholder="Conferma Password"
+            class="password-input styleInputText"
+            type="password"
+            formControlName="confirmPassword"
+          />
+          <button type="button" class="button-pass-eye" (click)="toggleConfirmPasswordVisibility()">
+            <i [class]="!showConfirmPass ? 'fa fa-eye-slash' : 'fa fa-eye'" style="color: dimgrey;"></i>
+          </button>
+<!--          <div *ngIf="RegisterForm?.get('confirmPassword')?.invalid && !matchingPassword" class="error">-->
+<!--            ⚠️ Le password non corrispondono-->
+<!--          </div>-->
+          <div *ngIf="RegisterForm.hasError('passwordMismatch') && !ValidateForm" class="error">
+            ⚠️ Le password non corrispondono
+          </div>
+        </div>
         <button type="submit">Registrati</button>
       </form>
     </div>
   </div>
 </div>
-<!--<form (submit)="register()">-->
-<!--    <h2 [ngStyle]="{textAlign:'center', margin:'1em'}">Registrazione</h2>-->
-<!--  <label>Username:</label>-->
-<!--  <input class="styleInputText" type="text" [(ngModel)]="user.username" name="username" required  />-->
-<!--  <div *ngIf="user.username" class="error">-->
-<!--    ⚠️ l'email è obbligatoria-->
-<!--  </div>-->
 
-<!--  <label>Email:</label>-->
-<!--  <input class="styleInputText" type="email" [(ngModel)]="user.email" name="email" required />-->
-<!--  <div *ngIf="user.email" class="error">-->
-<!--    ⚠️ l'email è obbligatoria-->
-<!--  </div>-->
-
-<!--  <label>Password:</label>-->
-<!--  <input class="styleInputText" type="password" [(ngModel)]="user.password" name="password" required />-->
-<!--  <div *ngIf="user.password" class="error">-->
-<!--    ⚠️ l'email è obbligatoria-->
-<!--  </div>-->
-<!--  <button type="submit">Registrati</button>-->
-<!--</form>-->
